RESOLVED FIXED161712
Web Inspector: Stepping to a line with an autoContinue breakpoint should still pause
https://bugs.webkit.org/show_bug.cgi?id=161712
Summary Web Inspector: Stepping to a line with an autoContinue breakpoint should stil...
Joseph Pecoraro
Reported 2016-09-07 13:48:54 PDT
Summary: Stepping to a line with an autoContinue breakpoint should still pause Test: 1. <script> 2. console.log('a'); 3. console.log('b'); 4. console.log('c'); 5. </script> Steps to Reproduce: 1. Inspect test 2. Set a breakpoint on line 2 3. Set a breakpoint on line 3, add an action, enable autocontinue 4. Reload => Pause on line 2 4. Step over => Expected to be paused on line 3, instead it ran through everything. Notes: - Debugger::pauseIfNeeded does a return if we hit a breakpoint that was auto continue. It should not return if we always paused because of stepping
Attachments
[PATCH] Proposed Fix (6.19 KB, patch)
2016-09-07 21:40 PDT, Joseph Pecoraro
bburg: review+
buildbot: commit-queue-
Archive of layout-test-results from ews105 for mac-yosemite-wk2 (948.96 KB, application/zip)
2016-09-07 22:26 PDT, Build Bot
no flags
Archive of layout-test-results from ews101 for mac-yosemite (974.35 KB, application/zip)
2016-09-07 22:36 PDT, Build Bot
no flags
Archive of layout-test-results from ews117 for mac-yosemite (1.48 MB, application/zip)
2016-09-07 22:41 PDT, Build Bot
no flags
[PATCH] For Landing (With New Test) (7.83 KB, patch)
2016-09-30 17:40 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2016-09-07 13:49:24 PDT
Joseph Pecoraro
Comment 2 2016-09-07 21:40:43 PDT
Created attachment 288245 [details] [PATCH] Proposed Fix
Build Bot
Comment 3 2016-09-07 22:26:51 PDT
Comment on attachment 288245 [details] [PATCH] Proposed Fix Attachment 288245 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/2031316 New failing tests: inspector/debugger/stepping-through-autoContinue-breakpoint.html
Build Bot
Comment 4 2016-09-07 22:26:54 PDT
Created attachment 288247 [details] Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 5 2016-09-07 22:36:12 PDT
Comment on attachment 288245 [details] [PATCH] Proposed Fix Attachment 288245 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/2031424 New failing tests: inspector/debugger/stepping-through-autoContinue-breakpoint.html
Build Bot
Comment 6 2016-09-07 22:36:15 PDT
Created attachment 288249 [details] Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2016-09-07 22:41:50 PDT
Comment on attachment 288245 [details] [PATCH] Proposed Fix Attachment 288245 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2031421 New failing tests: inspector/debugger/stepping-through-autoContinue-breakpoint.html
Build Bot
Comment 8 2016-09-07 22:41:54 PDT
Created attachment 288252 [details] Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Joseph Pecoraro
Comment 9 2016-09-07 23:35:56 PDT
I'm 90% sure these tests are failing because of other patches still up for review...
Blaze Burg
Comment 10 2016-09-08 12:05:19 PDT
Comment on attachment 288245 [details] [PATCH] Proposed Fix r=me
Joseph Pecoraro
Comment 11 2016-09-12 12:05:20 PDT
I'm going to obsolete the reviewed patch. I totally revamped all the stepping code and stepping tests, so I'll put up a new patch with a better test.
Joseph Pecoraro
Comment 12 2016-09-30 17:39:42 PDT
Comment on attachment 288245 [details] [PATCH] Proposed Fix Unobsoleting this. The patch stayed the same just the test case changed. So I'll land this with Brian's original review.
Joseph Pecoraro
Comment 13 2016-09-30 17:40:23 PDT
Created attachment 290411 [details] [PATCH] For Landing (With New Test)
Joseph Pecoraro
Comment 14 2016-09-30 17:55:39 PDT
Note You need to log in before you can comment on or make changes to this bug.