Web Inspector: Stepping to a line with an autoContinue breakpoint should still pause https://bugs.webkit.org/show_bug.cgi?id=161712 <rdar://problem/28193970>

Reviewed by Brian Burg.

Source/JavaScriptCore:

* debugger/Debugger.cpp:
(JSC::Debugger::pauseIfNeeded):
If we stepped to an auto-continue breakpoint we should continue
stepping, not just continue.

LayoutTests:

* inspector/debugger/stepping/stepping-through-autoContinue-breakpoint-expected.txt: Added.
* inspector/debugger/stepping/stepping-through-autoContinue-breakpoint.html: Added.

Canonical link: https://commits.webkit.org/180762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206698 268f45cc-cd09-0410-ab3c-d52691b4dbfc